--- a/ImageUpload/package.json
+++ b/ImageUpload/package.json
@@ -10,9 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native/new-app-screen": "0.81.1",
+    "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-native": "0.81.1",
-    "@react-native/new-app-screen": "0.81.1",
     "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
@@ -30,9 +31,11 @@
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "19.1.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   },
   "engines": {
